/*
 * Copyright 2016 serso aka se.solovyev
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 * Contact details
 *
 * Email: se.solovyev@gmail.com
 * Site:  http://se.solovyev.org
 */

apply plugin: 'java'

dependencies {
    implementation 'com.google.code.findbugs:jsr305:2.0.3'
    implementation 'xerces:xercesImpl:2.8.0'
    implementation 'com.google.guava:guava:32.1.2-android'

    testImplementation 'junit:junit:4.12'
    testImplementation 'net.sf.opencsv:opencsv:2.0'
}

sourceSets {
    test {
        output.resourcesDir = "build/classes/test"
    }
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
